# about-wasm-bindgen

cell_vs/: Cargo.toml  README.md  build.sh  cell.html  ref_cell.html  run.js  run.sh  unsafe_cell.html
cell_vs/externref_bench/: Cargo.toml  run.js  run.sh
cell_vs/externref_bench/src/: lib.rs
cell_vs/src/: lib.rs
cell_vs_unsafe_cell/: Cargo.toml  README.md  index.html
cell_vs_unsafe_cell/src/: lib.rs
macro_stuck/: Cargo.toml  README.md
macro_stuck/pmacro/: Cargo.toml
macro_stuck/pmacro/src/: lib.rs
macro_stuck/src/: lib.rs
